Use List.of() instead of Arrays.asList() where appropriate
See gh-29408